# llm-browser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
deprecated/: Dockerfile.airflow  docker-compose.yaml
llm_browser/: main.py
llm_browser/src/: database.py  reporting.py  tasks.py  utils.py
llm_browser/src/browser/: core.py  fireflies.py  scrapers.py
llm_browser/src/configs/: config.py
llm_browser/src/llm/: models.py  query.py
llm_browser/templates/: prompt_template.toml
llm_browser/tests/: test_browser.py  test_core.py  test_headless.py  test_llm.py  test_main.py  test_scrapers.py
src/: main.py
